# sap-btp-application

./: .gitignore  README.md  pyproject.toml
backend/: Procfile  main.py  manifest.yml  requirements.txt
backend/app/: __init__.py  config.py  root.py  routes.py  schemas.py  services.py
backend/routes/: root.py  users.py
backend/services/: destination_client.py  sfsf_api.py  xsuaa_token.py
